--- a/RockandStonev0.01/Assembly-CSharp.csproj
+++ b/RockandStonev0.01/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Buildings\BuildingScript.cs" />
     <Compile Include="Assets\Scripts\Workers\Dwarf.cs" />
     <Compile Include="Assets\Scripts\UI\CameraScript.cs" />
     <Compile Include="Assets\Scripts\Behavoirs\Composites\Sequence.cs" />
@@ -77,7 +78,7 @@
     <Compile Include="Assets\Scripts\Buildings\WorkShop.cs" />
     <Compile Include="Assets\Scripts\Behavoirs\Decorator.cs" />
     <Compile Include="Assets\Scripts\Behavoirs\Condition.cs" />
-    <Compile Include="Assets\Scripts\Buildings\BuildingScript.cs" />
+    <Compile Include="Assets\Scripts\UI\WorkShopUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
